--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
     "google-map-react": "^1.1.7",
     "jquery": "^3.5.0",
     "jvectormap-next": "^3.1.1",
+    "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-jvectormap": "^0.0.16",
+    "react-leaflet": "^2.7.0",
     "react-scripts": "3.4.1",
     "react-svg": "^11.0.18",
     "semantic-ui-css": "^2.4.1",
